--- a/app/views/blog_post/_form.html.erb
+++ b/app/views/blog_post/_form.html.erb
@@ -13,6 +13,6 @@
     <%= form.text_area :body %>
   </div>
   <div>
-    <%= form.button %>
+    <%= form.button button_label, class: "bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"  %>
   </div>
 <% end %>
