--- a/app/views/blog_post/new.html.erb
+++ b/app/views/blog_post/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New Post</h1>
 
-<%= render partial: "form", locals: {blog_post: @blog_post} %>
+<%= render partial: "form", locals: {blog_post: @blog_post, button_label: "Create Blog Post"} %>
