Rich Text and scope done

--- a/app/views/blog_post/_form.html.erb
+++ b/app/views/blog_post/_form.html.erb
@@ -10,7 +10,11 @@
   </div>
   <div>
     <%= form.label :body %>
-    <%= form.text_area :body %>
+    <%= form.rich_text_area :content %>
+  </div>
+  <div>
+    <%= form.label :published_at %>
+    <%= form.datetime_select :published_at, include_blank: true %>
   </div>
   <div>
     <%= form.button button_label, class: "bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow"  %>
