--- a/app/views/blog_post/index.html.erb
+++ b/app/views/blog_post/index.html.erb
@@ -2,9 +2,12 @@
 
 <% @blog_posts.each do |post| %>
   <div>
+    <% if post.draft? %>
+      <div class="p-2 rounded bg-gray-100 text-gray-900">Draft</div>
+    <% elsif post.scheduled? %>
+      <div class="p-2 rounded bg-blue-100 text-blue-900">Scheduled</div>
+    <% end %>
     <h2><%= link_to post.title, "/blog_post/#{post.id}" %></h2>
-  </div>
-  <div>
-    <ul><%= post.body %></ul>
+    <ul><%= post.content %></ul>
   </div>
 <% end %>
