--- a/app/views/blog_post/index.html.erb
+++ b/app/views/blog_post/index.html.erb
@@ -8,6 +8,9 @@
       <div class="p-2 rounded bg-blue-100 text-blue-900">Scheduled</div>
     <% end %>
     <h2><%= link_to post.title, "/blog_post/#{post.id}" %></h2>
-    <ul><%= post.content %></ul>
+    <ul><%= post.filtered_content().html_safe %></ul>
   </div>
 <% end %>
+<div class="mt-16"> 
+  <%== pagy_nav(@pagy) %>
+</div>
